--- a/starship.toml
+++ b/starship.toml
@@ -1,80 +1,41 @@
 ## FIRST LINE/ROW: Info & Status
-# First param ─┌
+
+# First param
 [username]
-format = " [╭─]($style) in "
+# format = " [╭─]($style) in "
+format = "[ $user]($style) in "
 style_user = "bold blue"
-style_root = "bold blue"
+style_root = "bold red"
 show_always = true
 
 # Second param
 [hostname]
 format = "[$hostname]($style) in "
-style = "bold dimmed red"
+style = "bold red"
 trim_at = "-"
 ssh_only = true
 
 # Third param
 [directory]
-style = "purple"
-truncation_length = 0
-truncate_to_repo = true
-truncation_symbol = "repo: "
-
-# Before all the version info (python, nodejs, php, etc.)
-[git_status]
-style = "white"
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-deleted = "x"
+format = "[$path]($style) "
 
 # Last param in the first line/row
 [cmd_duration]
-min_time = 1
-format = "took [$duration]($style)"
+min_time = 1000
+format = "took [$duration](bold yellow)"
 disabled = false
 
-## SECOND LINE/ROW: Prompt
-# Somethere at the beginning
-[battery]
-full_symbol = " "
-charging_symbol = " "
-discharging_symbol = " "
-disabled = true
-
-[[battery.display]]  # "bold red" style when capacity is between 0% and 10%
-threshold = 15
-style = "bold red"
-disabled = true
-
-[[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
-threshold = 50
-style = "bold yellow"
-disabled = true
-
-[[battery.display]]  # "bold green" style when capacity is between 10% and 30%
-threshold = 80
-style = "bold green"
-disabled = true
-
-# Prompt: optional param 1
-[time]
-format = " 🕙 $time($style)\n"
-time_format = "%T"
-style = "bright-white"
-disabled = true
-
-# Prompt: param 2 └─
+# Prompt
 [character]
-success_symbol = " [╰─λ](bold blue)"
-error_symbol = " [×](bold blue)"
+# success_symbol = " [╰─λ](bold blue)"
+success_symbol = " [↝ ](bold blue)"
+error_symbol = " [× ](bold red)"
 
 # SYMBOLS
 [status]
 symbol = "🔴"
 format = '[\[$symbol$status_common_meaning$status_signal_name$status_maybe_int\]]($style)'
 map_symbol = true
-disabled = false
 
 [aws]
 symbol = " "
@@ -96,6 +57,7 @@ symbol = " "
 
 [git_branch]
 symbol = " "
+style = "bold purple"
 
 [golang]
 symbol = " "
@@ -105,6 +67,7 @@ symbol = " "
 
 [java]
 symbol = " "
+disabled = true
 
 [julia]
 symbol = " "
@@ -120,6 +83,7 @@ symbol = " "
 
 [package]
 symbol = " "
+disabled = true
 
 [perl]
 symbol = " "
