--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -6,6 +6,7 @@ drawColor=#ff0000
 ignoreUpdateToVersion=0.10.2
 savePath=/home/natew/Documents/Screenshots
 savePathFixed=false
+setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showHelp=false
 showSidePanelButton=false
 showStartupLaunchMessage=false
