Stage for XMonad on PC

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -449,11 +449,11 @@ map T shell tar -cvzf %f.tar.gz %s
 map Xz shell unzip %f
 map Xt shell tar -xzvf %f
 
-# Move files
+# File actions
 map DD shell mv %s /home/${USER}/.local/share/Trash/
-
-# Open files
+map dT shell mv %s /home/${USER}/.local/share/Trash/
 map O  chain draw_possible_programs; console open_with%space
+map md console mkdir%space
 
 # Jumping around
 map H     history_go -1
@@ -467,7 +467,7 @@ map )     jump_non
 map gh cd ~
 map ge cd ~/.doom.d
 map gd cd ~/Dropbox
-map gc cd ~/Dropbox/Code
+map gc cd ~/Code
 map gs cd ~/Dropbox/Org/school/spring-22
 map gT cd ~/.local/share/Trash
 map g- cd -
@@ -514,7 +514,6 @@ map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
 map dD console delete
-map dT console trash
 
 map dd cut
 map ud uncut
